--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
+    "@portabletext/react": "^1.0.6",
+    "@sanity/client": "^3.3.0",
     "next": "12.1.5",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-i18next": "^11.16.7"
   },
   "devDependencies": {
     "eslint": "8.14.0",
