--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/material": "^5.6.3",
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.0",
+    "lodash.throttle": "^4.1.1",
     "next": "12.1.5",
     "next-sanity-image": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-i18next": "^11.16.7",
-    "react-image-gallery": "^1.2.8"
+    "react-image-gallery": "^1.2.8",
+    "use-debounce": "^8.0.1"
   },
   "devDependencies": {
     "eslint": "8.14.0",
