--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@formspree/react": "^2.2.5",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@portabletext/react": "^1.0.6",
